# SPOPT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: affine.txt  index_sets.txt  problem_data.yml  solver.yml  sphericalConstraint.txt
include/: DualLagrangianSolver.hpp  HSDESolver.hpp  LinearAlgebra.hpp  MATLAB.hpp  MOSEKSolver.hpp  Polynomial.hpp  ProblemData.hpp  SCSSolver.hpp  SPOPT.hpp  Solver.hpp  StandardLibraries.hpp
src/: DualLagrangianSolver.cpp  HSDESolver.cpp  MOSEKSolver.cpp  ProblemData.cpp  SCSSolver.cpp  SPOPT.cpp  Solver.cpp
